Increase spacing in blog lists. Random fixes.

--- a/src/styles/blog.less
+++ b/src/styles/blog.less
@@ -7,7 +7,7 @@
   padding: 0;
 
   li + li {
-    margin: 2.75em 0 0;
+    margin: 3em 0 0;
   }
 }
 
